--- a/index.html
+++ b/index.html
@@ -22,75 +22,107 @@
 <body>
   <div class="main">
     <div class="navigation">
+
       <span class="kinou1" style="--i:0;--x:-1;--y:0;"></span>
+
       <span class="kinou2" style="--i:1;--x:1;--y:0;"></span>
+
       <span class="kinou3" style="--i:2;--x:0;--y:-1;"></span>
+
       <span class="kinou4" style="--i:3;--x:0;--y:1;"></span>
+
       <span class="kinou5" style="--i:4;--x:-1;--y:1;"></span>
+
+      <!-- 普通車アイコン -->
       <span class="catalogue" style="--i:5;--x:-1;--y:-1;"><ion-icon name="car-sport-outline"></ion-icon>
+
+
+        <!-- CX-3 -->
         <li class="around1" style="--i:0;">
           <img src="img/CX-3.png"alt="CX-3">
           <p class="car-name-CX-3">CX-3</p>
           <p class="car-size-CX-3">4,275×1,765×1,550</p>
         </li>
+
+        <!-- CX-30 -->
         <li class="around2" style="--i:1;">
           <img src="img/CX-30.png"alt="CX-30">
           <p class="car-name-CX-30">CX-30</p>
           <p class="car-size-CX-30">4,395×1,795×1,540</p>
         </li>
+
+        <!-- MX-30 -->
         <li class="around3" style="--i:2;">
           <img src="img/MX-30.png"alt="MX-30">
           <p class="car-name-MX-30">MX-30</p>
           <p class="car-size-MX-30">4,395×1,795×1,550</p>
         </li>
+
+        <!-- CX-5 -->
         <li class="around4" style="--i:3;">
           <img src="img/CX-5.png"alt="CX-5">
           <p class="car-name-CX-5">CX-5</p>
           <p class="car-size-CX-5">4,575×1845×1,690</p>
         </li>
+
+        <!-- CX-60 -->
         <li class="around5" style="--i:4;">
           <img src="img/CX-60.png"alt="CX-60">
           <p class="car-name-CX-60">CX-60</p>
           <p class="car-size-CX-60">4,740×1,890×1,685</p>
         </li>
+
+        <!-- CX-8 -->
         <li class="around6" style="--i:5;">
           <img src="img/CX-8.png"alt="CX-8">
           <p class="car-name-CX-8">CX-8</p>
           <p class="car-size-CX-8">4,925×1,845×1,730</p>
         </li>
+
+        <!-- MAZDA6 -->
         <li class="around7" style="--i:6;">
           <img src="img/MAZDA6.png"alt="MAZDA6">
           <p class="car-name-MAZDA6">MAZDA6</p>
           <p class="car-size-MAZDA6">(s)4,865×1,840×1,450<br>(w)4,805×1,840×1,480</br></p>
         </li>
+
+        <!-- MAZDA3 -->
         <li class="around8" style="--i:7;">
           <img src="img/MAZDA3.png"alt="MAZDA3">
           <p class="car-name-MAZDA3">MAZDA3</p>
           <p class="car-size-MAZDA3">(f)4,460×1,795×1,440<br>(s)4,460×1,795×1,445</p>
         </li>
+
+        <!-- MAZDA2 -->
         <li class="around9" style="--i:8;">
           <img src="img/MAZDA2.png"alt="MAZDA2">
           <p class="car-name-MAZDA2">MAZDA2</p>
           <p class="car-size-MAZDA2">4,080×1,695×1,500</p>
         </li>
+
+        <!-- ROADSTER -->
         <li class="around10" style="--i:9;">
           <img src="img/ROADSTER.png"alt="ROADSTER">
           <p class="car-name-ROADSTER">ROADSTER</p>
           <p class="car-size-ROADSTER">3,915×1,735×1,235</p>
         </li>
       </span>
+
+      <!-- 軽自動車アイコン -->
       <span class="kinou7" style="--i:6;--x:1;--y:-1;"><ion-icon name="car-outline"></ion-icon></span>
+
       <span class="kinou8" style="--i:7;--x:1;--y:1;"></span>
-
-
-
     </div>
+
+    <!-- 閉じるアイコン -->
     <div class="close"><ion-icon name="close-outline"></ion-icon></div>
-  </div>
+    </div>
 
 
-  
+  <!-- 普通車アイコンnavi -->
   <nav class="navi1">
+
+    <!-- CX-3 navi -->
     <h2>CX-3</h2>
     <ul class="navi-menu">
       <li>
@@ -122,6 +154,7 @@
     </ul>
   </nav>
 
+  <!-- CX-30 navi -->
   <nav class="navi2">
     <h2>CX-30</h2>
     <ul class="navi-menu">
@@ -156,6 +189,7 @@
     </ul>
   </nav>
 
+  <!-- MX-30 navi -->
   <nav class="navi3">
     <h2>MX-30</h2>
     <ul class="navi-menu">
@@ -201,6 +235,7 @@
     </ul>
   </nav>
 
+  <!-- CX-5 navi -->
   <nav class="navi4">
     <h2>CX-5</h2>
     <ul class="navi-menu">
@@ -235,6 +270,8 @@
     </ul>
   </nav>
 
+
+  <!-- CX-60 navi -->
   <nav class="navi5">
     <h2>CX-60</h2>
     <ul class="navi-menu">
@@ -269,6 +306,7 @@
     </ul>
   </nav>
 
+  <!-- CX-8 navi -->
   <nav class="navi6">
     <h2>CX-8</h2>
     <ul class="navi-menu">
@@ -303,6 +341,7 @@
     </ul>
   </nav>
 
+  <!-- MAZDA6 navi -->
   <nav class="navi7">
     <h2>MAZDA6</h2>
     <ul class="navi-menu">
@@ -340,6 +379,7 @@
     </ul>
   </nav>
 
+  <!-- MAZDA3 navi -->
   <nav class="navi8">
     <h2>MAZDA3</h2>
     <ul class="navi-menu">
@@ -378,6 +418,7 @@
     </ul>
   </nav>
 
+  <!-- MAZDA2 navi -->
   <nav class="navi9">
     <h2>MAZDA2</h2>
     <ul class="navi-menu">
@@ -412,6 +453,7 @@
     </ul>
   </nav>
 
+  <!-- ROADSTER navi -->
   <nav class="navi10">
     <h2>ROADSTER</h2>
     <ul class="navi-menu">
